salesforce/force-app/main/default/objects/SmartDocs_Template_Mapping__c/SmartDocs_Template_Mapping__c.object-meta.xml
<CustomObject>
    <label>SmartDocs Template Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
        <displayFormat>SDM-{0000}</displayFormat>
    </nameField>
    <pluralLabel>SmartDocs Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>