salesforce/force-app/main/default/objects/SmartDocs_Template_Mapping__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>