salesforce/force-app/main/default/objects/SmartDocs_Template_Mapping__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <label>Template ID</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>