salesforce/force-app/main/default/objects/SmartDocs_Template_Mapping__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>